# connect-four

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  jest.setup.js  package-lock.json  package.json  pyproject.toml
connect_four/: main.py
src/: board.py  bot.py  main.py
src/bot/: board.py  bot.py  mcts.py  strategy.py
src/bot/mcts/: __init__.py  game.py  mcts.py  node.py
src/static/: index.html  index.js  style.css
src/static/js/: controller.js  game.js  graphics.js  index.js  server.js  sketch.js  subject.js  view.js
src/templates/: index.html
static/: game.js  index.html  sketch.js  style.css  view.js
tests/: conftest.py  game.test.js  test_functionals.py  test_integrations.py  view.test.js  visreg.py
tests/backend/: test_integration.py
tests/backend/integration/: test_bot.py  test_mcts.py
tests/backend/unit/: test_board.py  test_game.py  test_mcts.py  test_node.py
tests/frontend/: integration.test.js
tests/frontend/unit/: controller.test.js  game.test.js  server.test.js  subject.test.js  view.test.js
tests/functional/: conftest.py  test_functionals.py  visreg.py
tests/javascripts/: controller.test.js  game.test.js  integration.test.js  view.test.js
tests/javascripts/unit/: controller.test.js  game.test.js  server.test.js  view.test.js
