[tool.poetry]
name = "connect-four"
version = "0.1.0"
description = ""
authors = ["Vincent Lo <lovincent536@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.17.2"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
