[tool.poetry]
name = "connect-four"
version = "0.1.0"
description = ""
authors = ["Vincent Lo <lovincent536@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.17.2"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-image-diff = "^0.0.11"

[tool.pytest.ini_options]
markers = [
    'visual: marks as visual regression tests. The tests will capture images when the environment variable UPDATE_BASELINE=1',
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
