[tool.poetry]
name = "connect-four"
version = "0.1.0"
description = ""
authors = ["Vincent Lo <lovincent536@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.17.2"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pillow = "^10.2.0"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.1.1"

[tool.pytest.ini_options]
markers = [
    'visual: marks as visual regression tests. The tests will capture images when the environment variable UPDATE_BASELINE=1',
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
target-version = [
    'py37',
    'py38',
    'py39',
]
skip-string-normalization = true
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
